--- a/public/chat/chat.html
+++ b/public/chat/chat.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <link rel="stylesheet" href="styles.css"/>
+    <link rel="stylesheet" href="/chat/chat.css"/>
+    <script src="/chat/chat.js" defer></script>
     <title>Mini chat</title>
   </head>
   <body>
@@ -21,6 +22,6 @@
     </div>
 
     <script src="/socket.io/socket.io.js"></script>
-    <script src="script.js"></script>
+    
   </body>
 </html>
